@@ -40,10 +40,11 @@ c...     1     2     3     4     5     6    7     8     9    10
      2  0,    0,     0,   0,     0,    0,   0,    0,    0,    0,
      3  0,    0,     0,   0,     0,    0,   0,    1,    0,    0,
      4   3,    3,    0,    2,    1,    3,   1,   61,    1,    0,
-     5   1,    0,    0,    0,    0,    0,   0,    0,    0,    0,
+     5   1,    0,    0,    0,    0,    0,   0,    5,    0,    0,
      6   1,    0,    0,    0,    0,    0,   0,    0,    0,    0,
      7   20*0,
-     9   1,   909, 2022,03,22,5*0/
+     9   1,   909, 2023,07,27,5*0/
+c    9   1,   909, 2022,03,22,5*0/
 c    9   1,   908, 2022,02,13,5*0/
 c    9   1,   907, 2021,10,05,5*0/
 c    9   1,   906, 2021,08,13,5*0/
@@ -105,13 +106,13 @@ c..     1     2      3      4     5     6       7     8     9   10
       data (parc(i),i=101,200)/
      $  0.333333333333333d0, 0.3d0,0.0d0, 0.21d0, 1.0d0,  5*0.d0,
      1 10*0.d0,
-     2    0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   10.d0, 0.5d0,  0.4d0, 
+     2    0.d0,   0.d0,   0.d0,   0.d0,   3.d0,   10.d0, 0.5d0,  0.4d0, 
      &    0.d0,   0.d0, 
      3    4.d0,   0.3d0,  -7.d0,  0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
      &    0.d0,   0.5d0, 
      4    0.d0,   0.5d0,  1.d0,  0.5d0,  0.39693d0, -1.d0, 2.d0,  0.d0, 
      &    0.d0,   0.d0, 
-     5   2.1d0,  0.3d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
+     5   2.1d0,  0.3d0,   1.71d0, 0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
      &    0.d0,   0.d0, 
      6    0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
      &    0.d0,   0.d0, 
