@@ -1,5 +1,11 @@
 JAM:update note
 
+jam1.9094 2023/7/27
+o New option mstc(126),parc(125).
+When mstc(126)=1, change the $\Delta$ decay angular distribution:
+$dN/d(\cos\theta) \sim 1 + \ttt{parc(125)}\cos^2\theta$
+o Added mstc(158): options for deuteron coalescence with the parameter parc(153)
+
 jam1.9093 2022/5/6
 bug fix in the manual:’100:50’ total mass number 100 and 50 neutrons.
 'neutrons' should be 'protons.'
